Fix details z-index

--- a/scss/details.scss
+++ b/scss/details.scss
@@ -10,7 +10,7 @@
 .ka-talk-details {
   border: 4px solid $selected-border-color;
   background: $white;
-  z-index: 1;
+  z-index: 100;
   position: fixed;
   top: 50%;
   left: 50%;
